--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "~2.1.0",
+        "rtconner/laravel-tagging": "~2.2",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
